examples/invalid/005_abstract_not_overridden.jd
/*********************************
 * jPipe  -  Reference Examples  * 
 * @author   Sebastien Mosser    *
 * @compiler 2.x                 *
 *********************************/

template t {
    conclusion c is "A conclusion"
    strategy s   is "A strategy"
    @support abs is "An abstract support"

    s   supports c
    abs supports s
}

justification j implements t {
    conclusion top is "The system is correct"
    strategy js is "Via template"
    js supports top
    t:c supports js
}
